[metadata]
name = openpathsampling
version = 1.3.0.dev0
description = A Python package for path sampling simulations
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson, Jan-Hendrik Prinz, John D. Chodera, and Peter G. Bolhuis
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/openpathsampling/openpathsampling
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
include_package_data = True
install_requires = 
    future
    psutil
    numpy
    scipy
    pandas
    netcdf4
    svgwrite
    networkx
    matplotlib
    ujson<2
    mdtraj
    # mdtraj is not technically required, but we co-package it because it is
    # required for many integrations with other packages
packages = find:

[bdist_wheel]
universal = 1
