[metadata]
name = openpathsampling
version = 2.0.0.dev0
description = A Python package for path sampling simulations
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson, Jan-Hendrik Prinz, John D. Chodera, and Peter G. Bolhuis
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/openpathsampling/openpathsampling
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
include_package_data = True
python_requires = >=3.10
install_requires = 
    future
    psutil
    numpy
    scipy
    pandas
    netcdf4
    svgwrite
    networkx
    matplotlib
    ujson>=4.0.2
    dill
    sqlalchemy>=1.4.1
    mdtraj
# mdtraj is not technically required, but we co-package it because it is
# required for many integrations with other packages
# dill and sqlalchemy are technically only required for Python 3.11+, but
# we'll include them for all Python versions
packages = find:

[options.extras_require]
test = 
    pytest
    pytest-cov
    coveralls
    nbval>=0.10.0
simstore =
    # simstore requirements have been moved to main

[bdist_wheel]
universal = 1
